--- a/src/main.scss
+++ b/src/main.scss
@@ -12,3 +12,4 @@
 @import "components/language_switch/language_switch";
 @import "components/menu/menu_item";
 @import "components/blog/blog_post";
+@import "components/profile/profile_menu";
