--- a/src/components/blog/_blog_post.scss
+++ b/src/components/blog/_blog_post.scss
@@ -1,12 +1,9 @@
 .post-card {
   @extend %flex-column;
-  @extend %box-shadow;
+  @extend %card;
   width: 370px;
   min-height: 390px;
-  background-color: white;
-  border-radius: 7px;
   margin: 20px;
-  overflow: hidden;
   &__top {
     height: 205px;
     background-repeat: no-repeat;
@@ -17,14 +14,8 @@
     align-items: flex-start;
     padding: 20px 5px 20px 20px;
     .left-content {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 90px;
-      height: 90px;
-      padding: 10px;
-      border: 1px solid transparentize($main-color_3, .5);
-      border-radius: 50%;
+      @extend %flex-center;
+      @extend %card-avatar;
     }
     .right-content {
       margin-left: 20px;
