--- a/src/components/menu/_menu_item.scss
+++ b/src/components/menu/_menu_item.scss
@@ -1,10 +1,8 @@
 .menu {
   @extend %flex-row;
-  @extend %box-shadow;
+  @extend %card;
   width: fit-content;
   margin: 0 auto;
-  background-color: $white;
-  border-radius: 7px;
   &__item {
     position: relative;
     display: flex;
@@ -52,8 +50,8 @@
       width: 0;
       bottom: 0;
       margin: 0;
-      left: -1px;
-      border-color: $secondary-color;
+      left: 0;
+      border: 1.5px solid $secondary-color;
     }
   }
 }
