--- a/src/main.scss
+++ b/src/main.scss
@@ -13,3 +13,4 @@
 @import "components/menu/menu_item";
 @import "components/blog/blog_post";
 @import "components/profile/profile_menu";
+@import "components/forms/contact_form";
