--- a/src/components/language_switch/_language_switch.scss
+++ b/src/components/language_switch/_language_switch.scss
@@ -14,10 +14,10 @@
   &__ball {
     @extend %box-shadow;
     position: absolute;
-    top: -1px;
-    left: 0;
-    width: 25px;
-    height: 25px;
+    top: 2px;
+    left: 3px;
+    width: 20px;
+    height: 20px;
     background-color: $white;
     border-radius: 50%;
   }
