--- a/src/components/menu/_menu_item.scss
+++ b/src/components/menu/_menu_item.scss
@@ -2,7 +2,7 @@
   @extend %flex-row;
   @extend %card;
   width: fit-content;
-  margin: 0 auto;
+  margin: 0 auto 30px;
   &__item {
     position: relative;
     display: flex;
