--- a/src/base/styles/_general.scss
+++ b/src/base/styles/_general.scss
@@ -1,5 +1,7 @@
 body {
-  margin: 0;
+  @extend %max-1240;
+  height: 100vh;
+  overflow: hidden;
   font-family: $primary-font;
   font-size: 16px;
   font-weight: 400;
