--- a/src/components/forms/_contact_form.scss
+++ b/src/components/forms/_contact_form.scss
@@ -73,6 +73,9 @@
       font-weight: 300;
       padding: 0 20px;
       cursor: pointer;
+      * {
+        pointer-events: none;
+      }
       &:hover {
         .triangle{
           &-wrapper {
