--- a/src/base/styles/_helpers.scss
+++ b/src/base/styles/_helpers.scss
@@ -1,17 +1,4 @@
-/* shorthands to help out bulding fast markup */
-.hide-on-desktop {
-  display: none;
-  @include for-mobile-only {
-    display: block;
-  }
-}
-
-.hide-on-mobile {
-  display: block;
-  @include for-mobile-only {
-    display: none;
-  }
-}
+/* I usality build this shorthands to help out bulding fast markup */
 
 .hide {
   display: none;
