--- a/src/base/styles/_typography.scss
+++ b/src/base/styles/_typography.scss
@@ -19,4 +19,9 @@ a {
 }
 small {
   font: .815em $primary-font;
+  font-weight: 300;
+  color: $main-color_2;
+}
+span {
+  text-transform: capitalize;
 }
