--- a/src/components/profile/_profile_menu.scss
+++ b/src/components/profile/_profile_menu.scss
@@ -2,6 +2,10 @@
   @extend %card;
   width: 285px;
   height: 315px;
+  @include for-mobile-only {
+    margin: 20px auto;
+  }
+
   &__top {
     @extend %flex-center;
     height: 125px;
@@ -12,6 +16,7 @@
       @extend %flex-center;
       @extend %card-avatar;
     }
+
     .top-right {
       margin-left: 15px;
       h4 {
@@ -25,18 +30,21 @@
       }
     }
   }
+
   &__bottom {
     @extend %flex-column;
     span {
       color: $main-color_2;
       font-weight: 300;
     }
+
     a {
       @extend %flex-center;
       justify-content: space-between;
       height: 45px;
       padding: 0 20px;
       border-left: 3px solid $white;
+
       &:hover {
         background-color: $main-color_4;
         border-left-color: $secondary-color;
